--- a/www/lumberjucks/index.html
+++ b/www/lumberjucks/index.html
@@ -10,6 +10,8 @@
     <canvas id="bg-canvas" width="640" height="360"></canvas>
     <canvas id="fg-canvas" width="640" height="360"></canvas>
 
+    <script src="js/input.js"></script>
+    <script src="js/entities.js"></script>
     <script src="js/game.js"></script>
 </body>
 </html>
