Разного рода поправки

--- a/www/lumberjucks/index.html
+++ b/www/lumberjucks/index.html
@@ -12,6 +12,7 @@
 
     <script src="js/input.js"></script>
     <script src="js/entities.js"></script>
+    <script src="js/Render.js"></script>
     <script src="js/game.js"></script>
 </body>
 </html>
