--- a/www/UFO2/index.html
+++ b/www/UFO2/index.html
@@ -36,6 +36,8 @@
 <body>
     <canvas id="bg-canvas" width="640" height="360"></canvas>
     <canvas id="fg-canvas" width="640" height="360"></canvas>
+    <script src="scripts/entities.js"></script>
+    <script src="scripts/render.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
