Работа над Lumberjuck

--- a/www/lumberjucks/index.html
+++ b/www/lumberjucks/index.html
@@ -13,6 +13,8 @@
     <script src="js/input.js"></script>
     <script src="js/entities.js"></script>
     <script src="js/Render.js"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/Physics.js"></script>
     <script src="js/game.js"></script>
 </body>
 </html>
